Fix alignment documentation examples

--- a/assets/css/3-partials/_example-box.scss
+++ b/assets/css/3-partials/_example-box.scss
@@ -23,5 +23,6 @@
 .example-row {
   background: $color1;
   padding-top: 1rem;
-  min-height: 200px;
+  min-height: 350px;
+  border-radius: 5px;
 }
